<resources>
    <string name="app_name">Catatumbo Play</string>


    <string name="something_went_wrong">Algo salió mal. ¡Quizás el internet se cayó!</string>


    <!--Activity texts-->
    <string name="sign_in">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo Electrónico</string>
    <string name="or">O</string>
    <string name="register">¿Eres nuevo? Registrate ahora mismo</string>
    <string name="phone">Teléfono (Opcional)</string>
    <string name="viewplans">Ver planes</string>
    <string name="myplans">Mis planes</string>
    <string name="invoice">Factura</string>
    <string name="months">Meses</string>
    <string name="title">Titulo</string>
    <string name="status">Estado</string>
    <string name="check_network">Revisa tu intenet.</string>

    <!--Drawer-->

    <!--Fragment texts-->
    <string name="report">Reportar correo no deseado</string>
    <string name="embedlink">Copiar enlace incrustado</string>
    <string name="name">Nombre</string>
    <string name="password_not_match">Las contraseñas no coinciden</string>
    <string name="failed_initialize">¡Fallo al inicializar!</string>
    <string name="history">Historia</string>
    <string name="share">Compartir</string>
    <string name="more">Más</string>
    <string name="submit">Enviar</string>
    <string name="error_player">Error del reproductor de YouTube</string>
    <string name="terms_conditions">Terminos &amp; Condiciones</string>
    <string name="privacy_policy">Politicas de Privacidad</string>
    <string name="confirmation">Confirmación</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="cards">Tarjetas</string>
    <string name="manage_profile">Administrar Perfil</string>
    <string name="cant_play_video">¡Lo sentimos! No podemos reproducir el video en este momento, intente nuevamente más tarde.</string>
    <string name="ok">OK</string>
    <string name="copy_clipboard">El enlace ha sido copiado a su portapapeles</string>
    <string name="reason_to_report">Motivo para reportar</string>
    <string name="pay">Pago</string>
    <string name="spam_videos">Videos No Deseados</string>
    <string name="coupon_amount">Cantidad de cupón: </string>
    <string name="total_amount">Cantidad total: </string>
    <string name="cast">Emitir</string>
    <string name="clear_all">Limpiar Todo</string>
    <string name="apply">Aplicar</string>


    <!--DONT TRANSLATE FROM HERE-->


    <!--GCM Sender id DONT TRANSLATE-->

    <!--Stripe creds Dont Translate-->
    <string name="stripepk">pk_test_uDYrTXzzAuGRwDYtu7dkhaF3</string>

    <!--Facebook, Dont translate-->
    <!--<string name="facebook">351518151959383</string>-->
    <string name="facebook">2374328722809698</string> <!--Validado-->
    <string name="fb_login_protocol_scheme">fb2374328722809698</string>
    <string name="kids">Niños</string>
    <string name="no_videos_here">No Existen Videos</string>
    <string name="help">Ayuda</string>
    <string name="sign_up">Registrarse</string>
    <string name="account_login">¿Ya eres usuario? Iniciar Sesión</string>
    <string name="forgot_password">¿Se te olvidó la contraseña?</string>
    <string name="enter_your_email_for_password">Ingrese su correo electrónico para restablecer la contraseña</string>
    <string name="send_reset">Restablecer</string>
    <string name="no_internet">No hay Internet</string>
    <string name="press_back_again_exit">Presone atrás de nuevo para salir</string>
    <string name="nav_bar_home">Hogar</string>
    <string name="nav_bar_search">Buscar</string>
    <string name="nav_bar_category">Categorías</string>
    <string name="info">Información</string>
    <string name="play">Iniciar</string>
    <string name="series">Series</string>
    <string name="films">Videos</string>
    <string name="find_what_to_watch_next">Encuentra qué ver a continuación.</string>
    <string name="search_title_description">Busca programas para viajar, películas para relajarte o tus géneros favoritos.</string>
    <string name="search_hint">Introduce algo...</string>
    <string name="manage_profiles">Administrar perfiles</string>
    <string name="manage_profile_text">Administrar Perfiles</string>
    <string name="delete_account_confirmation">Eliminar confirmación</string>
    <string name="enter_password_to_delete">Ingrese la contraseña para eliminar la cuenta</string>
    <string name="logout_confirmation">Confirmación de cierre de sesión</string>
    <string name="sure_to_text">¿Estás seguro de</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="my_list">Mi Lista</string>
    <string name="paid_videos">Videos Pagados</string>
    <string name="email_cant_be_empty">El correo electrónico no puede estar vacío</string>
    <string name="password_cant_be_empty">La contraseña no puede estar vacía</string>
    <string name="enter_valid_email">Por favor introduzca una dirección de correo electrónico válida</string>
    <string name="minimum_six_characters">La contraseña debe tener un mínimo de seis caracteres</string>
    <string name="names_cant_be_empty">El nombre no puede estar vacío</string>
    <string name="network_check_success">Verificación de red exitosa</string>
    <string name="test_again">Prueba de nuevo</string>
    <string name="start_test">Iniciar prueba</string>
    <string name="streamview_android_server">Servidor StreamView de Android</string>
    <string name="internet_connection">Conexión a Internet</string>
    <string name="test_failed_desc">El dispositivo no parece tener una conexión a Internet. Inténtalo de nuevo.</string>
    <string name="check_your_network_title">Check your Network</string>
    <string name="test_your_network_from">Test your internet connection for any problems that might prevent you from watching %s</string>
    <string name="network_check_failed">Network test failed</string>
    <string name="more_like_this">Ver Más</string>
    <string name="trailers_and_more">Trailers y Más</string>
    <string name="expiry">Expiración</string>
    <string name="select">Select</string>
    <string name="old_password">Contraseña Anterior</string>
    <string name="new_password">Contraseña Nueva</string>
    <string name="confirm_password">Reescriba la Contraseña Nueva</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="save_profile">Guardar Perfil</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe</string>
    <string name="payment_id">Payment Id</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="login_again_with_new_password">Password changed. Please login again with new password!</string>
    <string name="auto_renewal">Auto Renewal</string>
    <string name="wish_list">Lista de Deseos</string>
    <string name="email_notifications">Notificaciones del Correo</string>
    <string name="push_notifications">Notificaciones</string>
    <string name="no_plans_avaliable">No Hay Planes Disponibles</string>
    <string name="amount">Amount</string>
    <string name="paid_date">Paid date</string>
    <string name="no_categories_found">No Se Encontraron Categorías.</string>
    <string name="no_notifications">No Hay Notificaciones</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="about">About</string>
    <string name="speed_test">Speed Test</string>
    <string name="no_cards_added">No cards found</string>
    <string name="cvv">CVV</string>
    <string name="xxxx_xxxx">xxxx-xxxx-xxxx-xxxx</string>
    <string name="card_hider_text">XXXX - XXXX - XXXX - </string>
    <string name="who_s_watching">Who\'s watching?</string>
    <string name="nothing_found">No Se Encontró Nada</string>
    <string name="remove">Remove</string>
    <string name="autoRenewalMsg">Are you sure you want to enable auto renewal?</string>
    <string name="cancelRenewal">Are you sure you want to cancel auto renewal?</string>
    <string name="browse_seasons">Browse Seasons</string>
    <string name="nav_bar_downloads">Downloads</string>
    <string name="no_of_accounts">No of accounts:</string>
    <string name="pay_to_watch_the_video">Pay to watch the video</string>
    <string name="channel_name">Downloads</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="download">Download</string>
    <string name="play_offline_video">Play Offline</string>
    <string name="no_suitable_download_urls">We couldn\'t find any suitable download URLs for this video. We will add it soon.</string>
    <string name="choose_download_quality">Choose download quality</string>
    <string name="no_offline_videos">No hay videos sin conexión</string>
    <string name="offline_videos">Vídeos Sin Conexión</string>
    <string name="problem_with_downloaded_video">Some problem with the downloaded video</string>
    <string name="delete_from_offline">Remove from Offline</string>
    <string name="choose_plan">Elige un Plan</string>
    <string name="my_plans">My Plans</string>
    <string name="delete_sub_profile">Borrar Subperfil</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="rate">Calificar</string>
    <string name="no_trailers_here">No Trailers found</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="add_card_title">Add Card</string>
    <string name="change_pass">Are you sure you want to change the password?</string>
    <string name="enter_a_name">Name</string>
    <string name="facebook_title">facebook</string>
    <string name="login">Log in</string>
    <string name="valid_expiry_please">Enter valid expiry date</string>
    <string name="phone_cant_be_empty" />
    <string name="phone_cant_be_stuff">Phone number must be within 4–16 digits</string>
    <string name="app_settings">App Settings</string>
    <string name="account">Cuenta</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="pay_through">Pay through</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="got_a_coupon_code">Got a Coupon Code?</string>
    <string name="coupon_apply_successful">Coupon code applied successfully!…</string>
    <string name="amount_to_pay">To pay</string>
    <string name="invalid_payment">Invalid Payment</string>
    <string name="success">Success</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="please_reopen">Please reopen the page.</string>
    <string name="dismiss">Dismiss</string>
    <string name="watch_video">Watch video</string>
    <string name="payment">Payment</string>
    <string name="spam_video">Spam video</string>
    <string name="payment_type">Payment type</string>
    <string name="choose_resolution_text">Choose Resolution</string>
    <string name="update_language">Update Language</string>
    <string name="view_plans">View Plans</string>
    <string name="multiLanguage">App language</string>
    <string name="wishlist">Wish List</string>
    <string name="delete_acc">Delete account</string>
</resources>
