<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <TextView
        style="@style/TextActivitySubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_confirmation"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/sureToDeleteTextDesc"
        style="@style/TextActivitySubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/enter_password_to_delete"
        android:textSize="14sp"
        android:textStyle="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/deleteAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/deleteAccountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/semi_white" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="end">

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:background="@null"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_10" />

        <Button
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:background="@null"
            android:text="@string/no"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>